--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "@ant-design/icons-vue": "^6.0.1",
     "ant-design-vue": "^3.0.0-beta.9",
     "axios": "^0.26.0",
+    "core-js": "^3.8.3",
     "dayjs": "^1.10.7",
     "element-plus": "^1.3.0-beta.7",
+    "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
-    "core-js": "^3.8.3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
